fix spacing between links

--- a/website/src/styles/app.css
+++ b/website/src/styles/app.css
@@ -22,9 +22,17 @@
   margin-top: 1rem;
 }
 
+.tmp-splash-page-actions-row .custom-col-4\/4 + .custom-col-4\/4 {
+  margin-top: 1rem;
+}
+
 @media screen and (min-width: 768px) {
   .tmp-splash-page-actions-row {
     margin-top: 4rem;
+  }
+
+  .tmp-splash-page-actions-row .custom-col-4\/4 + .custom-col-4\/4 {
+    margin-top: 0;
   }
 }
 
